# app/user/user.handler.go
@@ -1,12 +1,9 @@
 package user
 
 import (
-	"errors"
-	"github.com/jihanlugas/pos/app/app"
 	"github.com/jihanlugas/pos/request"
 	"github.com/jihanlugas/pos/response"
 	"github.com/labstack/echo/v4"
-	"gorm.io/gorm"
 	"net/http"
 )
 
@@ -30,18 +27,16 @@ func UserHandler(usecase Usecase) Handler {
 // @Failure      500  {object}  response.Response
 // @Router /user/{id} [get]
 func (h Handler) GetById(c echo.Context) error {
+	var err error
 
-	ID := c.Param("id")
-	if ID == "" {
+	id := c.Param("id")
+	if id == "" {
 		return response.Error(http.StatusBadRequest, "data not found", response.Payload{}).SendJSON(c)
 	}
 
-	data, err := h.usecase.GetById(ID)
+	data, err := h.usecase.GetViewById(id)
 	if err != nil {
-		if errors.Is(err, gorm.ErrRecordNotFound) {
-			return response.Error(http.StatusBadRequest, "data not found", response.Payload{}).SendJSON(c)
-		}
-		app.ErrorInternal(c, err)
+		return response.Error(http.StatusBadRequest, "data not found", response.Payload{}).SendJSON(c)
 	}
 
 	res := response.User(data)
@@ -63,12 +58,12 @@ func (h Handler) Create(c echo.Context) error {
 
 	loginUser, err := GetUserLoginInfo(c)
 	if err != nil {
-		return response.Error(http.StatusBadRequest, "error validation", response.ValidationError(err)).SendJSON(c)
+		return response.Error(http.StatusBadRequest, err.Error(), response.Payload{}).SendJSON(c)
 	}
 
 	req := new(request.CreateUser)
 	if err = c.Bind(req); err != nil {
-		return response.Error(http.StatusBadRequest, "error validation", response.ValidationError(err)).SendJSON(c)
+		return response.Error(http.StatusBadRequest, err.Error(), response.Payload{}).SendJSON(c)
 	}
 
 	if err = c.Validate(req); err != nil {
@@ -77,10 +72,77 @@ func (h Handler) Create(c echo.Context) error {
 
 	err = h.usecase.Create(loginUser, req)
 	if err != nil {
-		if errors.Is(err, gorm.ErrRecordNotFound) {
-			return response.Error(http.StatusBadRequest, "data not found", response.Payload{}).SendJSON(c)
-		}
-		app.ErrorInternal(c, err)
+		return response.Error(http.StatusBadRequest, "data not found", response.Payload{}).SendJSON(c)
+	}
+
+	return response.Success(http.StatusOK, "success", response.Payload{}).SendJSON(c)
+}
+
+// Update
+// @Tags User
+// @Security BearerAuth
+// @Accept json
+// @Produce json
+// @Param id path string true "ID"
+// @Param req body request.UpdateUser true "json req body"
+// @Success      200  {object}	response.Response
+// @Failure      500  {object}  response.Response
+// @Router /user/{id} [put]
+func (h Handler) Update(c echo.Context) error {
+	var err error
+
+	loginUser, err := GetUserLoginInfo(c)
+	if err != nil {
+		return response.Error(http.StatusBadRequest, err.Error(), response.Payload{}).SendJSON(c)
+	}
+
+	id := c.Param("id")
+	if id == "" {
+		return response.Error(http.StatusBadRequest, "data not found", response.Payload{}).SendJSON(c)
+	}
+
+	req := new(request.UpdateUser)
+	if err = c.Bind(req); err != nil {
+		return response.Error(http.StatusBadRequest, err.Error(), response.Payload{}).SendJSON(c)
+	}
+
+	if err = c.Validate(req); err != nil {
+		return response.Error(http.StatusBadRequest, "error validation", response.ValidationError(err)).SendJSON(c)
+	}
+
+	err = h.usecase.Update(loginUser, id, req)
+	if err != nil {
+		return response.Error(http.StatusBadRequest, err.Error(), response.Payload{}).SendJSON(c)
+	}
+
+	return response.Success(http.StatusOK, "success", response.Payload{}).SendJSON(c)
+}
+
+// Delete
+// @Tags User
+// @Security BearerAuth
+// @Accept json
+// @Produce json
+// @Param id path string true "ID"
+// @Success      200  {object}	response.Response
+// @Failure      500  {object}  response.Response
+// @Router /user/{id} [delete]
+func (h Handler) Delete(c echo.Context) error {
+	var err error
+
+	loginUser, err := GetUserLoginInfo(c)
+	if err != nil {
+		return response.Error(http.StatusBadRequest, err.Error(), response.Payload{}).SendJSON(c)
+	}
+
+	id := c.Param("id")
+	if id == "" {
+		return response.Error(http.StatusBadRequest, "data not found", response.Payload{}).SendJSON(c)
+	}
+
+	err = h.usecase.Delete(loginUser, id)
+	if err != nil {
+		return response.Error(http.StatusBadRequest, err.Error(), response.Payload{}).SendJSON(c)
 	}
 
 	return response.Success(http.StatusOK, "success", response.Payload{}).SendJSON(c)
